= Version 1.6.1
 * fix a limitation of giving directories on the command line. Before, only
   packages that were explicitely listed in the layout would be selected. Now,
   all packages are looked for -- even
= Version 1.6.0
 * starting this version, autoproj becomes the official build system for the
   Orocos Toolchain project
 * the osdeps management is now configurable: one can request autoproj to not
   install osdeps, to ask each time and/or to simply wait when osdeps should
   be installed
 * autoproj stops bailing out on OSes that it does not know. It simply does
   not offer to install OS dependencies on these operating systems
 * quite a few small bugfixes

= Version 1.5.8
 * add a way to add some ignore regexp to the dependency tracking. Updated user
   guide about that.
 * small cosmetic fixes
 * warn if an osdeps file overrides information present in other osdeps files
 * performance improvement at initialization: we now cache the result of OS
   autodetection in config.yml. That removes a few seconds due to calling
   lsb_release
 * better error reporting in some cases related to OS dependencies

= Version 1.5.7
 * allow using options and constants in the manifest as well
   This is so that we can use variables in the VCS definition for package sets.
 * display a status message before we access the RubyGems server. Ruby may block
   there in some cases, and it therefore gives a clue at what is actually
   failing.
 * fix autoproj status with remote sources: display the source name instead of
   the URL
 * fix symlink in autoproj/remotes after a checkout. The URL was used instead of
   the source name. Further updates were fixing it.

= Version 1.5.6
 * quickfix stupid bug in 1.5.5

= Version 1.5.5
 * allow to exclude some packages on some architectures

   Autobuild files can now contain 
     not_on 'os_name1', 'os_name2' do
       ...
     end
   statements that will exclude any package defined in